tests/paczka1/small_fuzzy/23489555.err
Error in line 11: 0QRSzI A89 -2,4
Error in line 9: hdVYi A618 3,6
